hack to allow running my own wildfly 10.1.0 instance for nosql integration config generation

--- a/api/src/main/resources/generator-config.json
+++ b/api/src/main/resources/generator-config.json
@@ -10,6 +10,7 @@
       "/core-service=management",
       "/subsystem=batch-jberet",
       "/subsystem=bean-validation",
+      "/subsystem=cassandra",
       "/subsystem=datasources",
       "/subsystem=ee",
       "/subsystem=ejb3",
@@ -28,6 +29,7 @@
       "/subsystem=mail",
       "/subsystem=messaging-activemq",
       "/subsystem=modcluster",
+      "/subsystem=mongodb",
       "/subsystem=naming",
       "/subsystem=pojo",
       "/subsystem=request-controller",
