renamed Cassandra subsystem to cassandradriver (to avoid conflict between child resource also called Cassandra)

--- a/api/src/main/resources/generator-config.json
+++ b/api/src/main/resources/generator-config.json
@@ -10,7 +10,7 @@
       "/core-service=management",
       "/subsystem=batch-jberet",
       "/subsystem=bean-validation",
-      "/subsystem=cassandra",
+      "/subsystem=cassandradriver",
       "/subsystem=datasources",
       "/subsystem=ee",
       "/subsystem=ejb3",
