--- a/api/src/main/resources/generator-config.json
+++ b/api/src/main/resources/generator-config.json
@@ -31,6 +31,7 @@
       "/subsystem=modcluster",
       "/subsystem=mongodb",
       "/subsystem=naming",
+      "/subsystem=neo4jdriver",
       "/subsystem=pojo",
       "/subsystem=request-controller",
       "/subsystem=remoting",
